mikec/tests/Pass/1_line/operators/decrement/23.mc
/*Deccrement operator*/

int main()
{
	int a;
	a--;
}