mikec/tests/fail/09.mc
/* Assign string value with single quotes */
void main()
{
	string a = 'a';
}